# tp-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
npm/: README.md  package.json
npm-shim/: README.md  package.json
tests/: test_cli_helpers.py  test_structures.py
tp_cli/: __init__.py  auth.py  cli.py  client.py  exercise_catalog.json
