[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp-cli"
version = "0.1.1"
description = "Unofficial command-line toolkit for TrainingPeaks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jakob Gmoser" },
]
keywords = ["trainingpeaks", "triathlon", "cycling", "running", "training", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "keyring>=25",
    "browser-cookie3>=0.19",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/masterjacy01/tp-cli"
Issues = "https://github.com/masterjacy01/tp-cli/issues"
Source = "https://github.com/masterjacy01/tp-cli"

[project.scripts]
tp = "tp_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tp_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/tp_cli",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/AGENTS.md",
    "/NOTICE",
    "/SECURITY.md",
    "/SKILL.md",
    "/manifest.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701"]
